RESOLVED FIXED79247
With tiled drawing enabled, clicking a link to a PDF causes a cross-fade
https://bugs.webkit.org/show_bug.cgi?id=79247
Summary With tiled drawing enabled, clicking a link to a PDF causes a cross-fade
Adam Roben (:aroben)
Reported 2012-02-22 09:04:50 PST
To reproduce: 0. Enable tiled drawing 1. Search for "w-4" on Google 2. Click the first result, which should be a link to a W-4 PDF When the PDF loads, a cross-fade happens between the Google search results page. This looks kind of nice, but I don't think it's intentional.
Attachments
Patch (2.30 KB, patch)
2012-03-14 15:24 PDT, Anders Carlsson
no flags
Patch (2.30 KB, patch)
2012-03-14 15:30 PDT, Anders Carlsson
no flags
Radar WebKit Bug Importer
Comment 1 2012-02-22 09:05:11 PST
Anders Carlsson
Comment 2 2012-03-14 15:24:28 PDT
Anders Carlsson
Comment 3 2012-03-14 15:30:17 PDT
Anders Carlsson
Comment 4 2012-03-14 16:27:31 PDT
Note You need to log in before you can comment on or make changes to this bug.